Quorum3/Library/Tests/TypeChecker/Pass/PrimitiveTextSetValue.quorum
class Main
    action Main
        text t = "1"
        t:SetValue("5")
    end
end
