Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjTextWrapped.quorum
class main
    action Main
        Number n = "text"
    end
end